--- a/index-2.html
+++ b/index-2.html
@@ -8,16 +8,12 @@
 body{padding:2rem 1rem;background:#fafcff;color:#1e293b}
 h1{text-align:center;margin-bottom:2rem;font-size:2rem;letter-spacing:1px;text-transform:uppercase}
 .container{max-width:1200px;margin:auto}
-
-/* --- cards --- */
 .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));gap:1rem;margin-bottom:2rem}
 .card{background:#fff;border:1px solid #888;border-radius:10px;padding:1rem;text-align:center}
 .card h3{font-size:.9rem;margin-bottom:.25rem}.card p{font-size:1.35rem;font-weight:700}
 .positive{color:#15803d}.negative{color:#b91c1c}
-
-/* --- tabelle --- */
 .table-wrap{overflow-x:auto}
-table{width:100%;border-collapse:collapse;margin-bottom:2rem;background:#ffffff;border:1px solid #888}
+table{width:100%;border-collapse:collapse;margin-bottom:2rem;background:#fff;border:1px solid #888}
 thead{background:#343434;color:#fff}
 th,td{padding:.55rem .6rem;text-align:center;font-size:.9rem}
 tbody tr:nth-child(even){background:#f1f5f9}
@@ -27,17 +23,10 @@ td.balance{font-weight:700}.balance.positive{color:#15803d}.balance.negative{col
 .badge{display:inline-block;padding:.1rem .45rem;border-radius:4px;font-size:.68rem;color:#fff;font-weight:700}
 .badge.income{background:#15803d}.badge.expense{background:#b91c1c}
 .sub-toggle{cursor:pointer}.hidden{display:none}
-
-/* --- form --- */
 form{display:grid;grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:.5rem}
 input,select,button{padding:.35rem;border:1px solid #888;border-radius:4px;background:#fefefe}
 button{cursor:pointer;font-weight:700;background:#d0d7e6}
-
-/* mobile: nasconde colonna saldo nel dettaglio */
-@media(max-width:600px){
-  th:nth-child(5),td:nth-child(5){display:none}
-  th,td{font-size:.78rem}
-}
+@media(max-width:600px){th:nth-child(5),td:nth-child(5){display:none}th,td{font-size:.78rem}}
 </style>
 </head>
 <body>
@@ -66,13 +55,13 @@ button{cursor:pointer;font-weight:700;background:#d0d7e6}
 </div>
 
 <script>
-/* ------------ utility ------------- */
-const START_BALANCE = 6100,
+/* ---------- util ---------- */
+const START = 6100,
       fmt = v => `€ ${Math.round(v).toLocaleString('it-IT')}`,
       mk  = d => d.slice(0,7),
-      last = (y,m) => new Date(y,m+1,0).getDate();
+      lastDay = (y,m)=>new Date(y,m+1,0).getDate();
 
-/* ------------ dataset fisso ------------- */
+/* ---------- dataset fisso ---------- */
 const subs = ["Netflix","Will","ChatGPT","NowTV","Spotify","Prime Video AD","Prime","iCloud","YouTube+"],
       subsSet = new Set(subs);
 
@@ -83,44 +72,42 @@ const subsData = [
 ];
 
 const oneOff = [
-  ["2025-06-27","Aereo Sicilia",53,"Spesa"],["2025-07-12","Beat Canzone",35,"Spesa"],
-  ["2025-07-16","Mix Canzone",27,"Spesa"],["2025-07-27","Aereo Sicilia",53,"Spesa"],
-  ["2025-08-10","Rimborso 730",400,"Entrata"],["2025-08-12","Beat Canzone",35,"Spesa"],
-  ["2025-08-16","Mix Canzone",27,"Spesa"],["2025-07-15","Tredicesima",1300,"Entrata"]
+ ["2025-06-27","Aereo Sicilia",53,"Spesa"],["2025-07-12","Beat Canzone",35,"Spesa"],
+ ["2025-07-16","Mix Canzone",27,"Spesa"],["2025-07-27","Aereo Sicilia",53,"Spesa"],
+ ["2025-08-10","Rimborso 730",400,"Entrata"],["2025-08-12","Beat Canzone",35,"Spesa"],
+ ["2025-08-16","Mix Canzone",27,"Spesa"],["2025-07-15","Tredicesima",1300,"Entrata"]
 ];
 
 const loan = ["2025-07-01","2025-08-01","2025-09-01","2025-10-01"].map(d=>[d,"Finanziamento",39,"Spesa"]);
 
-/* ------------ costruisci transazioni ------------- */
+/* ---------- costruisci transazioni ---------- */
 let tx=[];
-const push = (d,c,t,a)=>tx.push({date:d,category:c,type:t,amount:a});
+const push=(d,c,t,a)=>tx.push({date:d,category:c,type:t,amount:a});
 
 (function buildFixed(){
   oneOff.forEach(o=>push(...o));
-  loan.forEach(o => push(...o));
-
+  loan.forEach(o=>push(...o));
   for(let cur=new Date(2025,5,24); cur<=new Date(2026,11,31); cur.setMonth(cur.getMonth()+1)){
-    const y=cur.getFullYear(), m=cur.getMonth(), iso=`${y}-${String(m+1).padStart(2,"0")}`;
-
+    const y=cur.getFullYear(),m=cur.getMonth(),iso=`${y}-${String(m+1).padStart(2,'0')}`;
     if(cur>=new Date("2025-07-01")){
       push(`${iso}-01`,"Stipendio","Entrata",1650);
       push(`${iso}-01`,"Ticket Edenred","Entrata",160);
     }
-    push(`${iso}-${last(y,m)}`,"Affitto","Spesa",680);
-    if(iso!=="2025-08") push(`${iso}-${last(y,m)}`,"ATM","Spesa",39);
+    push(`${iso}-${lastDay(y,m)}`,"Affitto","Spesa",680);
+    if(iso!=="2025-08") push(`${iso}-${lastDay(y,m)}`,"ATM","Spesa",39);
     [5,12,19,26].forEach(d=>{
-      if(d<=last(y,m)) push(`${iso}-${String(d).padStart(2,"0")}`,"Tabacco","Spesa",20);
+      if(d<=lastDay(y,m)) push(`${iso}-${String(d).padStart(2,'0')}`,"Tabacco","Spesa",20);
     });
     subsData.forEach(([cat,amt,day,from])=>{
       if(iso>=from){
-        const d=Math.min(day,last(y,m));
-        push(`${iso}-${String(d).padStart(2,"0")}`,cat,"Spesa",amt);
+        const dd=Math.min(day,lastDay(y,m));
+        push(`${iso}-${String(dd).padStart(2,'0')}`,cat,"Spesa",amt);
       }
     });
   }
 })();
 
-/* ------------ render ------------- */
+/* ---------- render ---------- */
 function render(){
   const cards=document.getElementById("cards"),
         mBody=document.querySelector("#monthly tbody"),
@@ -128,49 +115,49 @@ function render(){
   cards.innerHTML=mBody.innerHTML=dBody.innerHTML="";
 
   const sorted=[...tx].sort((a,b)=>new Date(a.date)-new Date(b.date)),
-        months={}, first=mk(sorted[0].date), lastM=mk(sorted.at(-1).date);
+        months={}, first=mk(sorted[0].date),
+        lastM = mk(sorted[sorted.length-1].date);
 
-  /* crea chiavi mesi vuote */
   for(let d=new Date(first+"-01"); d<=new Date(lastM+"-01"); d.setMonth(d.getMonth()+1))
     months[mk(d.toISOString().slice(0,10))]={in:0,out:0,s:0};
 
-  let bal=START_BALANCE;
+  let bal=START;
   sorted.forEach(t=>{
     bal += t.type==="Entrata"?t.amount:-t.amount;
     t.balance = bal;
-    const k=mk(t.date);
-    t.type==="Entrata"? months[k].in+=t.amount : months[k].out+=t.amount;
-    months[k].s = bal;  // ultimo saldo del mese
+    const key=mk(t.date);
+    if(!months[key]) months[key]={in:0,out:0,s:0};          // salvagente
+    if(t.type==="Entrata") months[key].in+=t.amount;
+    else                   months[key].out+=t.amount;
+    months[key].s = bal;
   });
 
-  /* cards */
   const keys=Object.keys(months),
-        totIn = keys.reduce((s,k)=>s+months[k].in ,0),
-        totOut= keys.reduce((s,k)=>s+months[k].out,0),
-        avgOut= Math.round(totOut/keys.length);
-  [["Saldo iniziale",START_BALANCE],
+        totIn = keys.reduce((s,k)=>s+(months[k]?.in  ||0),0),
+        totOut= keys.reduce((s,k)=>s+(months[k]?.out ||0),0),
+        avgOut= keys.length? Math.round(totOut/keys.length):0;
+
+  [["Saldo iniziale",START],
    ["Entrate totali",totIn,"positive"],
-   ["Uscite totali",totOut,"negative"],
+   ["Uscite totali", totOut,"negative"],
    ["Spesa media mese",avgOut,"negative"],
    ["Saldo attuale",bal,bal>=0?"positive":"negative"]
   ].forEach(([l,v,cls])=>{
     cards.insertAdjacentHTML("beforeend",
-      `<div class="card"><h3>${l}</h3><p class="${cls||""}">${fmt(v)}</p></div>`);
+      `<div class="card"><h3>${l}</h3><p class="${cls||''}">${fmt(v)}</p></div>`);
   });
 
-  /* riepilogo mensile */
   keys.forEach(k=>{
     const {in:inn,out,s}=months[k];
     mBody.insertAdjacentHTML("beforeend",
-      `<tr><td>${k}</td><td class="income">${fmt(inn)}</td><td class="expense">${fmt(out)}</td><td class="balance ${s>=0?"positive":"negative"}">${fmt(s)}</td></tr>`);
+      `<tr><td>${k}</td><td class="income">${fmt(inn)}</td><td class="expense">${fmt(out)}</td><td class="balance ${s>=0?'positive':'negative'}">${fmt(s)}</td></tr>`);
   });
 
-  /* dettaglio + toggle abbonamenti */
-  let curMonth="", headerShown={};
+  let cur='', headerShown={};
   sorted.forEach(t=>{
     const m=mk(t.date);
-    if(m!==curMonth){
-      curMonth=m; headerShown[m]=false;
+    if(m!==cur){
+      cur=m; headerShown[m]=false;
       const label=new Date(m+"-01").toLocaleDateString("it-IT",{month:"long",year:"numeric"});
       dBody.insertAdjacentHTML("beforeend",
         `<tr class="month-sep"><td colspan="5">${label.charAt(0).toUpperCase()+label.slice(1)}</td></tr>`);
@@ -185,7 +172,7 @@ function render(){
     }else addRow(t);
   });
 
-  function addRow(t,extra=""){
+  function addRow(t,extra=''){
     dBody.insertAdjacentHTML("beforeend",
       `<tr class="${extra}"><td>${t.date}</td><td>${t.category}</td><td><span class="badge ${t.type==="Entrata"?"income":"expense"}">${t.type}</span></td><td class="${t.type==="Entrata"?"income":"expense"}">${fmt(t.amount)}</td><td class="balance ${t.balance>=0?"positive":"negative"}">${fmt(t.balance)}</td></tr>`);
   }
@@ -199,10 +186,10 @@ document.querySelector("#detail").addEventListener("click",e=>{
   const m=row.dataset.m, rows=document.querySelectorAll(`.sub-${m}`),
         hidden=[...rows][0].classList.contains("hidden");
   rows.forEach(r=>r.classList.toggle("hidden",!hidden));
-  row.firstElementChild.textContent = hidden?"▼ Abbonamenti":"► Abbonamenti";
+  row.firstChild.textContent = hidden? "▼ Abbonamenti":"► Abbonamenti";
 });
 
-/* aggiungi manuale */
+/* aggiungi transazione manuale */
 document.getElementById("add-form").addEventListener("submit",e=>{
   e.preventDefault();
   const d=document.getElementById("f-date").value,
